fr/payment/forms.css
img.submethod-logo {
	max-width: 100px;
}
div#payment_gateway-donate-addl-info-text {
	font-size: 90%;
	line-height: 120%;
    padding-top: 12px;
}
div#payment_gateway-donate-submessage {
	font-size: 90%;
	line-height: 120%;
}
div#payment_gateway-donate-submessage img {
    vertical-align:baseline;
    margin-right:4px;
}
#payment-table-donor td.label,
#payment-table-comment td.label,
#payment-table-cc td.label {
    white-space: nowrap;
    display: block;
    padding-right: 1em;
    text-align: right;
    width: 94px;
}

.payment-cc-form-section {
    float: none;
    margin-right: 0;
    margin-bottom: 1em;
}
#payment_gateway-personal-info {
	margin-right:0 !important;
}

#payment_gateway-donate-addl-info-secure-logos {
	float: left;
	margin-right: 2em;
}

#payment_gateway-donate-addl-info {
	margin-top:2em !important;
	margin-bottom:1em !important;
}

#appeal {
	background-color:transparent;
	border-color:transparent;
	border-style:solid;
	border-width:1px 0 1px 1px;
	padding:16px 24px 24px;
}
#appeal-head {
	font-size:1.5em;
	line-height:1.125em;
	padding-bottom:0.5em;
	padding-top:0.125em;
}
#appeal-body {
	font-size:1.125em;
	margin-bottom:1em;
	padding:0.2em 0;
}
#donate-head {
	border:none;
	font-size:1.5em;
	line-height:1.125em;
	padding-bottom:0;
	padding-top:0.125em;
}
#donate-body {
	font-size:1.125em;
	margin-bottom:1em;
}

/* Move the form up */
#mw-head-base {
	height: 1em !important;
}

/* Hiding content border */
table {
	background-color: transparent;
}
div#content {
	background-color: transparent !important;
	background-image: none !important;
}
div#mw-head-base {
	background-image: none !important;
}
#footer {
	background-image: none !important;
}

/* Hiding stuff we don't need */
h1#firstHeading, div#contentSub {
	display: none;
}

/* NEW STUFF */
ul#moreinfolinks li{
    list-style: none !important;
    list-style-image: none !important;
}
.form .options-h,
.form .options-v {
    margin: 0;
}
.options-h,
.options-v {
    list-style: none;
    margin: 0 0 1em 0;
}
.options-h img,
.options-v img {
    vertical-align: middle;
}
.options-h li,
.options-v li {
    background: none;
    margin-bottom: 0.3em;
    padding: 0;
}
.options-h li {
    display: inline;
    line-height: 2.5;
    margin-right: 0.3em;
    white-space: nowrap;
}
.options-h li select {
    vertical-align: middle;
}
.options-h li:last-child {
    margin: 0;
}
.form .options-v {
    margin-top: 5px;
}
.options-v li {
    padding-left: 25px;
    text-indent: -25px;
}
input:-moz-placeholder {
    opacity: 1;
}
input::-moz-placeholder {
    opacity: 1;
}
select:-moz-placeholder {
    opacity: 1;
}
select::-moz-placeholder {
    opacity: 1;
}
textarea:-moz-placeholder {
    opacity: 1;
}
textarea::-moz-placeholder {
    opacity: 1;
}
#donate {
  min-width: 32em !important;
  padding: 1em !important;
}


#greenBackground {
  background-color: #e2e2e2 !important;
  position: relative !important;
  padding: 1.6em !important;
  border: 0 !important;
  width: auto !important;
}

#greenBackground:before {
  content: " ";
  width: 0;
  height: 0;
  position: absolute;
  left: 0%;
  top: 100px;
  border: solid transparent;
  border-color: rgba(246, 246, 246, 0);
  border-left-color: #f6f6f6;
  border-width: 15px;
  margin-top: -15px;
}

.amount_header {
  color: #505050;
  text-transform: uppercase;
  font-size: 1.2em;
  line-height: 1.2;
  display: block;
  text-align: center;
  border-bottom: 1px solid #cbcbcb;
  margin-bottom: 1.0em!important;
  padding: 0 0 1.0em!important;
  font-weight: normal;
}

.amount_header span {
  display: block;
  color: #006699;
}

span#selected-amount {
  font-size: 1.8em;
}

.cc_header {
  text-transform: uppercase;
  font-size: .85em;
  color: #7c7c7c;
  text-align: center;
  margin-bottom: 1em;
  padding-bottom: 0;
  font-weight: normal;
}
.cc_header img {
    vertical-align: baseline;
    margin-left: 8px;
}

div.donor { width: auto !important; }
div.donor { width: 100% !important; }

#payment-table-donor input[type="text"],
#payment-table-donor input[type="number"],
#payment-table-donor input:not([type]),
#payment-table-donor input[type="email"],
#payment-table-donor select {
  background-color: #f6f6f6;
  padding: 1em !important;
  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, .2), inset 0 0 0 1px rgba(0, 0, 0, .1);
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .2), inset 0 0 0 1px rgba(0, 0, 0, .1);
  box-shadow: 0 1px 1px rgba(0, 0, 0, .2), inset 0 0 0 1px rgba(0, 0, 0, .1);
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  border: 0 !important;
  color: #006699;
  cursor: pointer;
  margin-bottom: .2em;
}

#payment-table-donor input[type="text"]:hover,
#payment-table-donor input[type="email"]:hover,
#payment-table-donor select:hover {
  background: #003955;
  color: #fff;
}

#payment-table-donor input[type="text"]:focus,
#payment-table-donor input[type="email"]:focus,
#payment-table-donor select:focus {
  background: #fff;
  color: #00476b;
  -moz-box-shadow: inset 0 1px 3px rgba(0,0,1,.5), inset 0 0 0 1px rgba(0,0,0,.1);
  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,1,.5), inset 0 0 0 1px rgba(0,0,0,.1);
  box-shadow: inset 0 1px 3px rgba(0,0,1,.5), inset 0 0 0 1px rgba(0,0,0,.1);
}

#payment-table-donor select { padding: .9em 1em !important; line-height: 40px; }

#amount_input * {
    vertical-align: top;
}

#topError {
	max-width: 481px;
}

.mw-donate-submessage {
  text-transform: uppercase;
  font-size: .75em !important;
  color: #7c7c7c;
  text-align: center;
}

#cards {
  clear: both;
  display: block;
  margin: 0 auto; }
#cards:before,
#cards:after {
 content: "";
 display: table;
}
#cards:after { clear: both; }
#cards li {
    background: #d1d1d1;
    margin: 0 .7% .7% 0 !important;
    float: left;
    text-align: center;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    cursor: pointer;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition:    all .3s ease-in-out;
    -o-transition:      all .3s ease-in-out;
    -ms-transition:     all .3s ease-in-out;
    transition:         all .3s ease-in-out;
}

#cards.three-per-line li {
    width: 32.63%;
    padding: 1em;
}
#cards.three-per-line > li:nth-child(3),
#cards.three-per-line > li:nth-child(6) { margin-right: 0; }

#cards.four-per-line li {
    width: 24.29%;
    padding: 1em 0.5em;
}
#cards.four-per-line > li:nth-child(4),
#cards.four-per-line > li:nth-child(8) { margin-right: 0; }
#cards li.has_sub_text {
    padding-bottom: 0.1em;
}
#cards.enabled li:hover {
    background: #bcbcbc;
}
#cards.enabled li:active {
    background: #b1b1b1;
    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.35);
    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.35);
    box-shadow: inset 0 1px 2px rgba(0,0,0,.35);
}
#cards li input {
    display: block;
    width: 100%;
    margin: 0 0 .7em !important;
    box-shadow: none !important;
}
#cards li label {
    cursor: pointer;
    margin-top: .5em;
    display: block;
}
#cards li label img {
    margin: 0 auto !important;
    height: auto !important;
}
#cards li.has_sub_text label {
    margin-top: 0;
}
#cards li.has_sub_text input {
    margin-bottom: 0.1em !important;
}
#cards li label p.card_sub_text {
    margin: -0.5em auto;
}
#paymentContinue, #paymentSubmit {
  margin-top: 1em !important;
  clear: both;
  display: none;
}
#paymentContinue.force, #paymentSubmit.force {
    display:block;
}
.btn {
  background-color: #757575 !important;
  color: #fff !important;
  width: 100%;
  text-transform: uppercase;
  font-size: 1.3em;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  padding: .6em !important;
}
.btn.enabled {
  background-color: #367fb4 !important;
  cursor: pointer;
}
.btn.enabled:hover { background-color: #1d5278 !important; }
.btn:active {
  -moz-box-shadow: inset 0 1px 4px rgba(0,0,1,.5);
  -webkit-box-shadow: inset 0 1px 4px rgba(0,0,1,.5);
  box-shadow: inset 0 1px 4px rgba(0,0,1,.5);
}
.hidden {
	display: none !important;
}
#overlay {
	z-index: 999;
	display: none;
	position: fixed;
	left: 0;
	top: 0;
	bottom: 0;
	right: 0;
	background: rgba( 128, 128, 128, 0.3 );
}
#loading {
	position: fixed;
	top: 50%;
	left: 50%;
	margin: -26px 0 0 -28px;
}

dd.field {
    margin-bottom: 0;
    margin-left: 0;
}
div.error-box {
    margin: auto;
    width: 70%;
    border: solid black 2px;
    padding: 20px;
    text-align:center;
    font-size: 1.5em;
}
div.error-box h2 {
    color: red;
}

/* extra styles only for mobile */
@media only screen and (max-width : 400px) {
    
    body {
        background-color: #EAECF0;
        box-sizing: border-box;
    }
    
    td#donate form input[type="text"],
    td#donate form input[type="email"],
    td#donate form select{
        display: block;
        font-size: 1.2em;
        background: #fff !important;
        box-shadow: inset 0 0 0 0.1em #fff !important;
        border-radius: 2px !important;
        
        border:1px solid #ccc !important;
    }
    td#donate form input[type="text"]:hover,
    td#donate form input[type="email"]:hover,
    td#donate form select:hover{
        background: #fff;
        color: #666;
        border:1px solid #999 !important;
        
    }    
    td#donate form input[type="text"]:focus,
    td#donate form input[type="email"]:focus,
    td#donate form select:focus{
        background: #fff;
        color: #666;
        border:1px solid #36c !important;
        
    }    
    
    #greenBackground:before {
        display: none;
    }
    body #mw-content-text #donate #greenBackground {
        background: transparent !important;
        padding: 10px !important; 
        margin: 0 auto !important;
    }
    body #mw-content-text #donate {
        padding: 0 !important;
        
    }
    body #mw-page-base {
        background: transparent !important; 
    }
    

}

